samples/_failures_safe/1761546787_08b97a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04eed8fb.c: In function ‘print_distances’:
./samples/SAFE/__tmp_04eed8fb.c:187:12: error: expected ‘,’ or ‘;’ at end of input
  187 |     struct GraphNode *current = graph
      |            ^~~~~~~~~
./samples/SAFE/__tmp_04eed8fb.c:187:12: error: expected declaration or statement at end of input
